Minor CSS fix for white space during scrolling

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -344,6 +344,7 @@ select {
     -moz-transition: none;
     -o-transition: none;
     transition: none;
+    background-color: transparent !important;
 }
 
 a.thumbnail:hover {
